@@ -50,7 +50,6 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -65,8 +64,6 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
-import static java.util.Collections.singleton;
-import static java.util.Collections.singletonList;
 import static net.sourceforge.argparse4j.impl.Arguments.store;
 
 public abstract class TransactionsCommand {
@@ -159,7 +156,7 @@ public abstract class TransactionsCommand {
         ) throws Exception {
             final DescribeProducersResult.PartitionProducerState result;
             try {
-                result = admin.describeProducers(singleton(topicPartition))
+                result = admin.describeProducers(Set.of(topicPartition))
                     .partitionResult(topicPartition)
                     .get();
             } catch (ExecutionException e) {
@@ -345,7 +342,7 @@ public abstract class TransactionsCommand {
             final DescribeProducersResult.PartitionProducerState result;
 
             try {
-                result = admin.describeProducers(singleton(topicPartition), options)
+                result = admin.describeProducers(Set.of(topicPartition), options)
                     .partitionResult(topicPartition)
                     .get();
             } catch (ExecutionException e) {
@@ -418,7 +415,7 @@ public abstract class TransactionsCommand {
 
             final TransactionDescription result;
             try {
-                result = admin.describeTransactions(singleton(transactionalId))
+                result = admin.describeTransactions(Set.of(transactionalId))
                     .description(transactionalId)
                     .get();
             } catch (ExecutionException e) {
@@ -451,7 +448,7 @@ public abstract class TransactionsCommand {
                 result.topicPartitions().stream().map(TopicPartition::toString).collect(Collectors.joining(","))
             );
 
-            ToolsUtils.prettyPrintTable(HEADERS, singletonList(row), out);
+            ToolsUtils.prettyPrintTable(HEADERS, List.of(row), out);
         }
     }
 
@@ -615,7 +612,7 @@ public abstract class TransactionsCommand {
             );
 
             if (candidates.isEmpty()) {
-                printHangingTransactions(Collections.emptyList(), out);
+                printHangingTransactions(List.of(), out);
             } else {
                 Map<Long, List<OpenTransaction>> openTransactionsByProducerId = groupByProducerId(candidates);
 
@@ -649,9 +646,9 @@ public abstract class TransactionsCommand {
 
             if (topic.isPresent()) {
                 if (partition.isPresent()) {
-                    return Collections.singletonList(new TopicPartition(topic.get(), partition.get()));
+                    return List.of(new TopicPartition(topic.get(), partition.get()));
                 } else {
-                    topics = Collections.singletonList(topic.get());
+                    topics = List.of(topic.get());
                 }
             } else {
                 topics = listTopics(admin);
@@ -752,7 +749,7 @@ public abstract class TransactionsCommand {
             } catch (ExecutionException e) {
                 printErrorAndExit("Failed to describe " + transactionalIds.size()
                     + " transactions", e.getCause());
-                return Collections.emptyMap();
+                return Map.of();
             }
         }
 
@@ -778,7 +775,7 @@ public abstract class TransactionsCommand {
                 return new ArrayList<>(admin.listTopics(listOptions).names().get());
             } catch (ExecutionException e) {
                 printErrorAndExit("Failed to list topics", e.getCause());
-                return Collections.emptyList();
+                return List.of();
             }
         }
 
@@ -788,14 +785,14 @@ public abstract class TransactionsCommand {
             List<String> topics
         ) throws Exception {
             List<TopicPartition> topicPartitions = new ArrayList<>();
-            consumeInBatches(topics, MAX_BATCH_SIZE, batch -> {
+            consumeInBatches(topics, MAX_BATCH_SIZE, batch ->
                 findTopicPartitions(
                     admin,
                     brokerId,
                     batch,
                     topicPartitions
-                );
-            });
+                )
+            );
             return topicPartitions;
         }
 
@@ -807,13 +804,13 @@ public abstract class TransactionsCommand {
         ) throws Exception {
             try {
                 Map<String, TopicDescription> topicDescriptions = admin.describeTopics(topics).allTopicNames().get();
-                topicDescriptions.forEach((topic, description) -> {
+                topicDescriptions.forEach((topic, description) ->
                     description.partitions().forEach(partitionInfo -> {
                         if (brokerId.isEmpty() || hasReplica(brokerId.get(), partitionInfo)) {
                             topicPartitions.add(new TopicPartition(topic, partitionInfo.partition()));
                         }
-                    });
-                });
+                    })
+                );
             } catch (ExecutionException e) {
                 printErrorAndExit("Failed to describe " + topics.size() + " topics", e.getCause());
             }
@@ -838,15 +835,15 @@ public abstract class TransactionsCommand {
 
             List<OpenTransaction> candidateTransactions = new ArrayList<>();
 
-            consumeInBatches(topicPartitions, MAX_BATCH_SIZE, batch -> {
+            consumeInBatches(topicPartitions, MAX_BATCH_SIZE, batch ->
                 collectCandidateOpenTransactions(
                     admin,
                     brokerId,
                     maxTransactionTimeoutMs,
                     batch,
                     candidateTransactions
-                );
-            });
+                )
+            );
 
             return candidateTransactions;
         }
@@ -880,7 +877,7 @@ public abstract class TransactionsCommand {
 
                 long currentTimeMs = time.milliseconds();
 
-                producersByPartition.forEach((topicPartition, producersStates) -> {
+                producersByPartition.forEach((topicPartition, producersStates) ->
                     producersStates.activeProducers().forEach(activeProducer -> {
                         if (activeProducer.currentTransactionStartOffset().isPresent()) {
                             long transactionDurationMs = currentTimeMs - activeProducer.lastTimestamp();
@@ -891,8 +888,8 @@ public abstract class TransactionsCommand {
                                 ));
                             }
                         }
-                    });
-                });
+                    })
+                );
             } catch (ExecutionException e) {
                 printErrorAndExit("Failed to describe producers for " + topicPartitions.size() +
                     " partitions on broker " + brokerId, e.getCause());
@@ -928,7 +925,7 @@ public abstract class TransactionsCommand {
             } catch (ExecutionException e) {
                 printErrorAndExit("Failed to list transactions for " + producerIds.size() +
                     " producers", e.getCause());
-                return Collections.emptyMap();
+                return Map.of();
             }
         }
 
